# Cloud-Meta-data-Extractor-API

./: README.md  pyproject.toml
src/streamfetch/: cli.py
src/streamfetch/processors/: __init__.py  base.py  parquet.py  read_row_column.py
src/streamfetch/validators/: base.py
streamfetch/: detector.py
streamfetch/processors/: extension_provider.py  read_chunk.py  read_meta.py
streamfetch/validators/: delimiter_type.py
